--- a/Text_Data_Analysis.ipynb
+++ b/Text_Data_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Text Data Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPooa68x8twM/v2/Tr+omol",
+      "authorship_tag": "ABX9TyNk7r/QUWZiekxKsR+ymgXS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,118 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "id": "Df_hO4j4W9CI",
+        "outputId": "07b5144f-5775-4e5d-a9c7-75225297e2b1"
+      },
+      "source": [
+        "# First look \n",
+        "comment.head()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>video_id</th>\n",
+              "      <th>comment_text</th>\n",
+              "      <th>likes</th>\n",
+              "      <th>replies</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>It's more accurate to call it the M+ (1000) be...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>To be there with a samsung phone\\n😂😂😂</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Thank gosh, a place I can watch it without hav...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>What happened to the home button on the iPhone...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Power is the disease.  Care is the cure.  Keep...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      video_id  ... replies\n",
+              "0  jt2OHQh0HoQ  ...       0\n",
+              "1  jt2OHQh0HoQ  ...       0\n",
+              "2  jt2OHQh0HoQ  ...       0\n",
+              "3  jt2OHQh0HoQ  ...       0\n",
+              "4  jt2OHQh0HoQ  ...       0\n",
+              "\n",
+              "[5 rows x 4 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6vUi7e77W_nP"
+      },
+      "source": [
+        "#!pip install textblob library\n",
+        "from textblob import TextBlob"
+      ],
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
