Finding and Dropping Null Value

--- a/Text_Data_Analysis.ipynb
+++ b/Text_Data_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Text Data Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk7r/QUWZiekxKsR+ymgXS",
+      "authorship_tag": "ABX9TyMh8B5Pljm3SLLYsO8W5c0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,6 +203,87 @@
         "from textblob import TextBlob"
       ],
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m2qM9hW5X7tI",
+        "outputId": "37a38272-17f3-4c59-f9a8-fe4f4dff16cb"
+      },
+      "source": [
+        "# Look for polarity of the first comment\n",
+        "TextBlob(\"It's more accurate to call it the M+ (1000) be...\").sentiment.polarity"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.45000000000000007"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MAeymeCoYL82",
+        "outputId": "72c0f044-43ae-4248-d3c7-6f25d907fda5"
+      },
+      "source": [
+        "# Finding any null value\n",
+        "comment.isna().sum()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "video_id         0\n",
+              "comment_text    28\n",
+              "likes            0\n",
+              "replies          0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SomQipjuYZoe"
+      },
+      "source": [
+        "# dropping null value\n",
+        "comment.dropna(inplace=True)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pxY4b4w9Ym4l"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
