--- a/Text_Data_Analysis.ipynb
+++ b/Text_Data_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Text Data Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMh8B5Pljm3SLLYsO8W5c0W",
+      "authorship_tag": "ABX9TyM1QqU6UU06HBBopewu2sXb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,10 +281,266 @@
         "id": "pxY4b4w9Ym4l"
       },
       "source": [
-        ""
+        "# Appendding polarity value \n",
+        "polarity=[]\n",
+        "for i in comment['comment_text']:\n",
+        "   polarity.append(TextBlob(i).sentiment.polarity)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n2pSIqyeY8_2"
+      },
+      "source": [
+        "# Creating new polarity column\n",
+        "comment['polarity']=polarity"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 662
+        },
+        "id": "70jffd_vZxdT",
+        "outputId": "82a095c7-052b-45b7-dc82-a23497ec147a"
+      },
+      "source": [
+        "# First look\n",
+        "comment.head(20)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>video_id</th>\n",
+              "      <th>comment_text</th>\n",
+              "      <th>likes</th>\n",
+              "      <th>replies</th>\n",
+              "      <th>polarity</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>It's more accurate to call it the M+ (1000) be...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.450000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>To be there with a samsung phone\\n😂😂😂</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Thank gosh, a place I can watch it without hav...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>What happened to the home button on the iPhone...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Power is the disease.  Care is the cure.  Keep...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Keep calm and buy iphone 8 Keep calm and buy i...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.300000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>i am a big fan of youtube and u !!!!!!!!!!!!!</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>You will never find Losers who line up and pay...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.100000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>*APPLE JUST COMMENTED ON MY LAST VIDEO* I'm cr...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.028571</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>I'm only here to see Emma, I love her so much!...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>Mom said: Just one more video before bed</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>what is the song?? 39:20</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>I started crying at 49:01 when Emma's EP showe...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.300000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>3 years late on wireless charging, 3 years lat...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.026563</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>more one before to bed</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>subscribe me if you love your mummy</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>They really just took the samsung s8 and named...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.200000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>so if someone has a twin sibling both can unlo...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.250000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>For god sake its better than my ps4pro</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>jt2OHQh0HoQ</td>\n",
+              "      <td>7mp cam what kind of standard is this in 2017?</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.300000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       video_id  ...  polarity\n",
+              "0   jt2OHQh0HoQ  ...  0.450000\n",
+              "1   jt2OHQh0HoQ  ...  0.000000\n",
+              "2   jt2OHQh0HoQ  ...  0.000000\n",
+              "3   jt2OHQh0HoQ  ...  0.000000\n",
+              "4   jt2OHQh0HoQ  ...  1.000000\n",
+              "5   jt2OHQh0HoQ  ...  0.300000\n",
+              "6   jt2OHQh0HoQ  ...  0.000000\n",
+              "7   jt2OHQh0HoQ  ... -0.100000\n",
+              "8   jt2OHQh0HoQ  ...  0.028571\n",
+              "9   jt2OHQh0HoQ  ...  0.500000\n",
+              "10  jt2OHQh0HoQ  ...  0.500000\n",
+              "11  jt2OHQh0HoQ  ...  0.000000\n",
+              "12  jt2OHQh0HoQ  ...  0.300000\n",
+              "13  jt2OHQh0HoQ  ...  0.026563\n",
+              "14  jt2OHQh0HoQ  ...  0.500000\n",
+              "15  jt2OHQh0HoQ  ...  0.500000\n",
+              "16  jt2OHQh0HoQ  ...  0.200000\n",
+              "17  jt2OHQh0HoQ  ...  0.250000\n",
+              "18  jt2OHQh0HoQ  ...  0.500000\n",
+              "19  jt2OHQh0HoQ  ...  0.300000\n",
+              "\n",
+              "[20 rows x 5 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
