Creating total Comment without stopping words

--- a/Text_Data_Analysis.ipynb
+++ b/Text_Data_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Text Data Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxBsD3hwzNmq87sDh2YwtD",
+      "authorship_tag": "ABX9TyMsUauAUhGC7xSnWB9/A0+d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -591,6 +591,30 @@
         "from wordcloud import WordCloud,STOPWORDS"
       ],
       "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TeyD5scFcJuI"
+      },
+      "source": [
+        "# Unique Value\n",
+        "stopwords=set(STOPWORDS)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ny4OFG2acUKg"
+      },
+      "source": [
+        "# Joining The Positive Comment \n",
+        "total_comment=' ' .join(comment_positive['comment_text'])"
+      ],
+      "execution_count": 21,
       "outputs": []
     }
   ]
