Correlation Between Columns

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Sentiment Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNg+V41zYPdXjoIGUTLAgkT",
+      "authorship_tag": "ABX9TyO5MpBQyb1Yc16wFxBaffCX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1186,6 +1186,7 @@
         "outputId": "fb36f40c-bb99-4a93-faf6-b117da8ce48c"
       },
       "source": [
+        "# Regression Plot\n",
         "sns.regplot(data=videos,x='likes',y='views')\n",
         "plt.title(\"Regression Plot B/W Like & Views\")\n"
       ],
@@ -1226,6 +1227,7 @@
         "outputId": "7ba6b11a-3b7c-4419-d4d5-7fb726831501"
       },
       "source": [
+        "# Regression Plot\n",
         "sns.regplot(data=videos,x='dislikes',y='views')\n",
         "plt.title(\"Regression Plot B/W DisLike & Views\")"
       ],
@@ -1354,6 +1356,7 @@
         "outputId": "a4b1bd85-54a9-460f-fe35-0260f3aaaec7"
       },
       "source": [
+        "# Heat Map\n",
         "sns.heatmap(df_corr.corr(),annot=True)\n",
         "plt.title(\"Correlation Matrix\")"
       ],
