Sorting the emojis in the form of dictionary

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Sentiment Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPO3g7SfPJ89ZoFLcdQNlyJ",
+      "authorship_tag": "ABX9TyNjH5L+gJTt9y5POTCa18Hi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1593,6 +1593,7 @@
         "id": "wmOOv7MxCayw"
       },
       "source": [
+        "# sorting out emoji from the string\n",
         "comments = comment['comment_text'][1]"
       ],
       "execution_count": 46,
@@ -1608,6 +1609,7 @@
         "outputId": "5ae7cf9d-9c3a-42c7-f64f-552edcdd4948"
       },
       "source": [
+        "# taking out the no of emoji's\n",
         "[c for c in comments if c in emoji.UNICODE_EMOJI]"
       ],
       "execution_count": 47,
@@ -1630,6 +1632,7 @@
         "id": "ECTjznPDENXX"
       },
       "source": [
+        "# sorting out emoji's from the data \n",
         "str=\"\"\n",
         "for i in comment['comment_text']:\n",
         "  list=[c for c in i if c in emoji.UNICODE_EMOJI]\n",
@@ -1649,6 +1652,7 @@
         "outputId": "a166c3be-d3c8-46c1-cff6-eadde957c74f"
       },
       "source": [
+        "# Number of emojis\n",
         "len(str)"
       ],
       "execution_count": 49,
@@ -1676,6 +1680,7 @@
         "outputId": "185e9a53-7379-49cc-c358-df5b5d09c1b9"
       },
       "source": [
+        "# first look\n",
         "str"
       ],
       "execution_count": 50,
@@ -1701,6 +1706,7 @@
         "id": "xRkqN1hSln9_"
       },
       "source": [
+        "# sorting it in its unique number and frequency\n",
         "result={}\n",
         "for i in set(str):\n",
         "  result[i]=str.count(i)"
@@ -1718,6 +1724,7 @@
         "outputId": "b4b64e5c-c166-4df6-ced0-c7bd7225632e"
       },
       "source": [
+        "#First Look\n",
         "result"
       ],
       "execution_count": 53,
@@ -2744,6 +2751,7 @@
         "outputId": "237353e8-3ba2-46bb-895e-0b68f04f47ce"
       },
       "source": [
+        "# Stated in list format\n",
         "result.items()"
       ],
       "execution_count": 54,
@@ -2766,6 +2774,7 @@
         "id": "51i9GNIQmt8k"
       },
       "source": [
+        "# Sorting it out in the proper manner in the of dicionary \n",
         "final = {}\n",
         "for key,value in sorted(result.items(),key = lambda item:item[1]):\n",
         "  final[key]=value"
